[package]
name = "triggered"
version = "0.1.2"
authors = ["Linus Färnstrand <faern@faern.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Triggers for one time events between tasks and threads"
repository = "https://github.com/faern/triggered"
keywords = ["oneshot", "mpmc", "async", "sync", "event"]
categories = ["asynchronous", "concurrency"]
edition = "2018"

[dependencies]
loom = { version = "0.5.4", features = ["checkpoint"] }
